--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -19,5 +19,8 @@
     <string name="btn_drive_rear">Detrás</string>
     <string name="btn_drive_user1">Modo de usuario 1</string>
     <string name="btn_drive_user2">Modo de usuario 2</string>
+    <string name="loudness_switch">Loudness switch</string>
+    <string name="high_notes">High notes</string>
+    <string name="bass">Low notes</string>
 
 </resources>
