--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -20,4 +20,8 @@
     <string name="btn_drive_user1">用戶模式1</string>
     <string name="btn_drive_user2">用戶模式2</string>
 
+    <string name="loudness_switch">響度開關</string>
+    <string name="high_notes">高音</string>
+    <string name="bass">低音</string>
+
 </resources>
