--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">צליל DSP</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string-array name="dsp_aps_type">
         <item>"מִשׁתַמֵשׁ"</item>
@@ -24,5 +24,6 @@
     <string name="high_notes">צלילים גבוהים</string>
 
     <string name="bass">צלילים נמוכים</string>
+    <string name="reset_default">שחזור ברירת מחדל</string>
 
 </resources>
