--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DSP 사운드</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string-array name="dsp_aps_type">
         <item>사용자</item>
@@ -24,5 +24,6 @@
     <string name="high_notes">고음</string>
 
     <string name="bass">저음</string>
+    <string name="reset_default">기본값 복원</string>
 
 </resources>
