--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Som DSP</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string-array name="dsp_aps_type">
         <item>do utilizador</item>
@@ -24,5 +24,6 @@
     <string name="high_notes">Notas agudas</string>
 
     <string name="bass">Notas graves</string>
+    <string name="reset_default">Restaurar padrão</string>
 
 </resources>
