--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DSP</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string-array name="dsp_aps_type">
         <item>Пользователь</item>
@@ -24,5 +24,6 @@
     <string name="high_notes">Высокие ноты</string>
 
     <string name="bass">Низкие ноты</string>
+    <string name="reset_default">Восстановить настройки по умолчанию</string>
 
 </resources>
