--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">เสียง DSP</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string-array name="dsp_aps_type">
         <item>ผู้ใช้</item>
@@ -24,5 +24,6 @@
     <string name="high_notes">เสียงสูง</string>
 
     <string name="bass">เสียงต่ำ</string>
+    <string name="reset_default">คืนค่าเป็นค่าเริ่มต้น</string>
 
 </resources>
