--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DSP sesi</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string-array name="dsp_aps_type">
         <item>kullanıcı</item>
@@ -24,5 +24,6 @@
     <string name="high_notes">Yüksek notalar</string>
 
     <string name="bass">Düşük notalar</string>
+    <string name="reset_default">Varsayılan ayarları geri yükle</string>
 
 </resources>
