--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DSP音效</string>
+    <string name="app_name">AwellAutoEq2313</string>
 
     <string name="btn_drive_left">驾驶模式</string>
     <string name="btn_drive_right">副驾模式</string>
@@ -10,6 +10,7 @@
     <string name="loudness_switch">响度开关</string>
     <string name="high_notes">高音</string>
     <string name="bass">低音</string>
+    <string name="reset_default">恢复默认</string>
 
     <string-array name="dsp_aps_type">
         <item>用户</item>
