--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -19,9 +19,8 @@
         <item>流行</item>
         <item>摇滚</item>
         <item>古典</item>
-        <item>柔和</item>
-        <item>大厅</item>
-        <item>影院</item>
+        <item>低音</item>
+        <item>高音</item>
     </string-array>
 
 </resources>
